examples/test/testpolicy5931.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5931
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key42: value27
      key10: value6
      key28: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value27
      podSelector:
        matchLabels:
          key40: value39
